# tarefa_MatrizLedGrupo

./: CMakeLists.txt  README.md  Tarefa.c  diagram.json  led_matrix.c  wokwi.toml
src/: led_matrix.c  teste.c  ws2812.pio
